[gd_scene load_steps=6 format=3 uid="uid://bojo5mnmadf4j"]

[ext_resource type="Script" uid="uid://bvdp5eir5pi2" path="res://panels/popups/UIPanelPicker/UIPanelPicker.gd" id="2_ktnxn"]
[ext_resource type="StyleBox" uid="uid://daxhx5qr5qdeu" path="res://assets/styles/UIPanelBase.tres" id="2_xgsr8"]
[ext_resource type="Texture2D" uid="uid://bly6v8fqc5sdb" path="res://assets/icons/Panel.svg" id="3_kjule"]
[ext_resource type="Script" uid="uid://c1mxckcn5x4su" path="res://components/Scripts/TaggedLineEdit.gd" id="4_lx25v"]
[ext_resource type="PackedScene" uid="uid://dfu5s8fjy0ex4" path="res://components/EditControls/EditControls.tscn" id="5_xgsr8"]

[node name="UIPanelPicker" type="PanelContainer" node_paths=PackedStringArray("categorised_tree", "panel_tree", "search_bar", "edit_controls")]
custom_minimum_size = Vector2(0, 60)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -302.0
offset_top = -32.0
offset_right = 302.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_styles/panel = ExtResource("2_xgsr8")
script = ExtResource("2_ktnxn")
categorised_tree = NodePath("VBoxContainer/HBoxContainer2/CategorisedTree")
panel_tree = NodePath("VBoxContainer/HBoxContainer2/PanelTree")
search_bar = NodePath("VBoxContainer/HBoxContainer/ScrollContainer/LineEdit")
edit_controls = NodePath("VBoxContainer/HBoxContainer/EditControls")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("3_kjule")
flat = true

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
placeholder_text = "Select Panel"
select_all_on_focus = true
script = ExtResource("4_lx25v")

[node name="EditControls" parent="VBoxContainer/HBoxContainer" instance=ExtResource("5_xgsr8")]
layout_mode = 2
show_back = true
show_edit = false
show_settings = false
show_close = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CategorisedTree" type="Tree" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2
hide_root = true
select_mode = 1

[node name="PanelTree" type="Tree" parent="VBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
columns = 2
hide_root = true
select_mode = 1

[connection signal="gui_input" from="VBoxContainer/HBoxContainer/ScrollContainer/LineEdit" to="." method="_on_line_edit_gui_input"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/ScrollContainer/LineEdit" to="." method="search_for"]
[connection signal="text_submitted" from="VBoxContainer/HBoxContainer/ScrollContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="item_activated" from="VBoxContainer/HBoxContainer2/CategorisedTree" to="." method="_on_categorised_tree_item_activated"]
[connection signal="item_activated" from="VBoxContainer/HBoxContainer2/PanelTree" to="." method="_on_panel_tree_item_activated"]
